--- a/Project-1/index.html
+++ b/Project-1/index.html
@@ -44,6 +44,79 @@
         <section class="banner_image">
             <img src="images/banner.png" alt="">
         </section>
+
+        <section class="marque">
+            <div class="slide">
+                <div class="list_1">
+                    <div class="child">
+                        <img src="images/lasa.png" alt="">
+                    </div>
+                    <div class="child">
+                        <img src="images/lasa.png" alt="">
+                    </div>
+                    <div class="child">
+                        <img src="images/lasa.png" alt="">
+                    </div>
+                    <div class="child">
+                        <img src="images/lasa.png" alt="">
+                    </div>
+                    <div class="child">
+                        <img src="images/lasa.png" alt="">
+                    </div>
+                </div>
+                <div class="list_1">
+                    <div class="child">
+                        <img src="images/lasa.png" alt="">
+                    </div>
+                    <div class="child">
+                        <img src="images/lasa.png" alt="">
+                    </div>
+                    <div class="child">
+                        <img src="images/lasa.png" alt="">
+                    </div>
+                    <div class="child">
+                        <img src="images/lasa.png" alt="">
+                    </div>
+                    <div class="child">
+                        <img src="images/lasa.png" alt="">
+                    </div>
+                </div>
+                <div class="list_1">
+                    <div class="child">
+                        <img src="images/lasa.png" alt="">
+                    </div>
+                    <div class="child">
+                        <img src="images/lasa.png" alt="">
+                    </div>
+                    <div class="child">
+                        <img src="images/lasa.png" alt="">
+                    </div>
+                    <div class="child">
+                        <img src="images/lasa.png" alt="">
+                    </div>
+                    <div class="child">
+                        <img src="images/lasa.png" alt="">
+                    </div>
+                </div>
+                <div class="list_1">
+                    <div class="child">
+                        <img src="images/lasa.png" alt="">
+                    </div>
+                    <div class="child">
+                        <img src="images/lasa.png" alt="">
+                    </div>
+                    <div class="child">
+                        <img src="images/lasa.png" alt="">
+                    </div>
+                    <div class="child">
+                        <img src="images/lasa.png" alt="">
+                    </div>
+                    <div class="child">
+                        <img src="images/lasa.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
